# OOP_PROJECT_G6

./: CMakeLists.txt  README.md  setup.sh
src/: main.cpp
